src/objects/Communication_Preference_GLBL__c.object
<CustomObject>
    <description>Object used to store Speakers consent and communication preferences.
Created by John A Adams 9/26/2013
Renamed Communication from Consent by John A Adams 10/7/2013
Renamed Communication Preference from Communication by JFerraro 10/17/2013</description>
    <fields>
        <fullName>Account_GLBL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates consent decisions with the account
Created by John A Adams 9/27/2013</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Consent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Preference_GLBL__c</fullName>
        <description>Captures the accounts preferred means of communication
Created by John A Adams 9/27/2013</description>
        <label>Communication Preference</label>
        <picklist>
            <picklistValues>
                <fullName>e-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Delivery_GLBL__c</fullName>
        <description>Stores how contract should be delivered to HCP
Created by John A Adams 10/17/2013</description>
        <label>Contract Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Restrictions_GLBL__c</fullName>
        <description>Restrictions to contract that HCP is requiring
Created by John A Adams 10/22/2013</description>
        <inlineHelpText>Note any restrictions to contracting that exist.</inlineHelpText>
        <label>Contract Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Preferences_GLBL__c</fullName>
        <description>Captures HCP preferences at a more granular level e.g. I want to speak about these topics, I want to speak only in International Meetings.
Created by John A Adams 10/23/2013</description>
        <label>Detailed Preferences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interaction_Channel_Type_GLBL__c</fullName>
        <description>Stores the  interaction selection by Speakers / Delegates
Created by John A Adams 10/2/2013</description>
        <label>Interaction/Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_of_Choice_GLBL__c</fullName>
        <description>Language preference for communications.
Created by John A Adams 10/17/2013</description>
        <label>Language of Choice</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permission_Status_GLBL__c</fullName>
        <description>Records Speakers / Delegates permission to contact them</description>
        <label>Permission Status</label>
        <picklist>
            <picklistValues>
                <fullName>Permission Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permission Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker_Interest_GLBL__c</fullName>
        <description>Indicates candidates interest in being a speaker
Created by John A Adams 10/3/2013</description>
        <label>Speaker Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract with Restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Communication Preference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Communicaion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Preferences</pluralLabel>
    <recordTypes>
        <fullName>Consent_EVNT_MVN</fullName>
        <active>true</active>
        <description>Communication consent</description>
        <label>Consent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preferences_EVNT_MVN</fullName>
        <active>true</active>
        <description>Preferences Record Type</description>
        <label>Preferences</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>